added pyproj as a requirement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     # "math"
     # "json",
     "shapely",
-    "schema"
+    "schema",
+    "pyproj"
 ]
 license = {file = "LICENSE"}
 
