--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 creds.txt
-src/CentralizedAppraiser/UnitedStates/*/*/_data/
+credentials.txt
+src/CentralizedAppraiser/UnitedStates/*/*/_data
